--- a/src/components/main/main.component.html
+++ b/src/components/main/main.component.html
@@ -1,7 +1,44 @@
-<div class="container">
-	<div class="row">
-		<div class="col-md-12">
-			<h2>hola</h2>
-		</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Reporte</title>
+
+	<link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
+</head>
+<body>
+	<div class="container-fluid">
+		<nav class="navbar">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menu">
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+				     </button>
+					<a href="#" class="navbar-brand"><i class="fas fa-home"></i></a>
+				</div>
+				<div class="collapse navbar-collapse" id="menu">
+					<ul class="nav navbar-nav">
+						<li><a href=""><i class="fas fa-briefcase"></i>   Configuración</a></li>
+						<li><a href=""><i class="fas fa-chart-line"></i>   Monitoreo</a></li>
+						<li><a href=""><i class="fas fa-chart-pie"></i>   Resultados</a></li>
+						<li><a href=""><i class="fas fa-bolt"></i>   Planes de acción</a></li>
+						<li><a href=""><i class="fas fa-key"></i>   Accesos y permisos</a></li>
+					</ul>
+					<ul class="nav navbar-nav navbar-right">
+						<li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Fabian
+        <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="#"><i class="fas fa-sign-out-alt"></i>   Logout</a></li>
+        </ul>
+      </li>
+					</ul>
+				</div>
+			</div>
+		</nav>
 	</div>
-</div>
+
+</body>
+</html>
