--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -8,79 +8,17 @@
 @secundarycolor:#ff7351;
 @backgroundcolor:#e9ebee;
 @gris2:#d6d7d9;
-@gris3:#afafaf;
-@gris4:#777777;
+@gris3:darken(@gris2,30%);
+@gris4:darken(@gris3,60%);
 @barscolor:#4580c2;
 @menutextcolor:#7fa7cf;
 @darkblue:#43526e;
 
-small{color:@gris4;font-size:.7em;font-weight:bold;}
-hr{border-color:@gris2;}
-.header{background-color:@maincolor;
-	a{color:@menutextcolor;}
-	.navbar{
-		margin-bottom:0px;
-		.navbar-brand{color:#fff;}
-		.navbar-nav{
-			a{.transiciones;}
-			a:hover,a:active,a:focus{background-color:inherit;color:#a0d0ff;}
-			
-		}
-		.navbar-collapse{
-			.navbar-right{
-				img{height:22px;margin-right:10px;}
-			}
-		}
-	}
-}
-body{background-color:@backgroundcolor;letter-spacing:-0.3px;}
-.body{padding-top:10px;
-	.profile{
-		img{width: 40%;}
-		.profilemenu{
-			padding:0;
-			li{
-				list-style:none;
-				padding:5px;
-				a{ color:@gris4;font-weight:bold;}
-
-			}
-
-			li.active,li:hover{background-color:@gris2;
-				a{color:@barscolor;}
-			}
-		}
-		.escalas{
-			padding:0;
-			li{
-				list-style: none;padding: 3px 0;
-				p{color:@gris3;font-size:.7em;}
-			}
-		}
-	}
-	.dashboard{
-		.detallecompetencias{
-
-			.progress{
-				width:30%;display:inline-block;margin-bottom:0;
-				.progress-bar{background-color:@barscolor;}
-			}
-			.detalle_competencia{
-				padding:10px;border-bottom:solid 0.1em @backgroundcolor;
-				b{font-size:.8em;padding:0 20px;}
-			}
-		}
-
-		.panel{
-			h3{font-weight:800;font-size:.8em;}
-		}
-	}
-}
-b{color:@darkblue;}
-
+@red:#ff5f3b;
 
 
 //mixins
+
 .cuadrado(@color: @maincolor){
 	height:15px;
 	width: 15px;
@@ -89,9 +27,9 @@ b{color:@darkblue;}
 
 }
 .botones(@fondo: @maincolor,@colortxt:@secundarycolor,@colorborde:@secundarycolor){
-	padding:10px 20px;
+	padding:4px 14px;
 	margin:0 5px;
-	border-radius:3px;
+	border-radius:2px;
 	border:solid 0.1em;
 	font-size:.7em;
 	display: inline-block;
@@ -107,6 +45,18 @@ b{color:@darkblue;}
 	    -ms-transition:  @transicion;
 	     -o-transition:  @transicion;
 	        transition:  @transicion;
+}
+.animaciones(@animation){
+	-webkit-animation:@animation;
+	-o-animation:@animation ;
+	animation:@animation ;
+}
+.transformaciones(@transform){
+	-webkit-transform: @transform;
+	   -moz-transform: @transform;
+	    -ms-transform: @transform;
+	     -o-transform: @transform;
+	        transform: @transform;
 }
 
 .mainbtn{
@@ -140,4 +90,162 @@ b{color:@darkblue;}
 
 
 
+//Layout
+
+
+small{color:@gris4;font-size:.7em;font-weight:bold;}
+hr{border-color:@gris2;}
+.header{background-color:@maincolor;
+	a{color:@menutextcolor;}
+	.navbar{
+		margin-bottom:0px;
+		.navbar-brand{color:#fff;}
+		.navbar-header{
+			.icon-bar{background-color:#fff;}
+		}
+		.navbar-nav{
+			a{.transiciones;}
+			a:hover{background-color:inherit;color:#a0d0ff;}
+			
+		}
+		.navbar-collapse{
+			.navbar-right{
+				a.dropdown-toggle{color:#fff;font-weight:bold;}
+				img{height:22px;margin-right:10px;}
+				a:hover,a:focus,a:visited{background-color:inherit;}
+			}
+		}
+	}
+}
+body{background-color:@backgroundcolor;letter-spacing:-0.3px;color:@gris4;}
+.body{padding-top:10px;
+	.profile{
+		img{width: 40%;.transiciones();}
+		img:hover{.transformaciones(scale(1.2));}
+		.profilemenu{
+			padding:0;
+			li{
+
+				list-style:none;
+				padding:5px;
+				.transiciones(all ease .4s);
+				a{ color:@gris4;}
+
+			}
+
+			li.active,li:hover{background-color:@gris2;
+				a{color:@barscolor;}
+			}
+		}
+		.escalas{
+			padding:0;
+			li{
+				list-style: none;padding: 3px 0;font-size:.8em;
+				p{color:@gris3;font-size:.8em;}
+			}
+		}
+	}
+	.dashboard{
+		.up-panels{min-height:250px;}
+		.detallecompetencias{
+
+			.progress{
+				width:100%;display:inline-block;margin-bottom:0;
+				.progress-bar{background-color:@barscolor;}
+			}
+			.detalle_competencia{
+				padding:10px;border-bottom:solid 0.1em @backgroundcolor;
+				b{font-size:.8em;padding:0 20px;}
+				.collapse{
+					padding:40px 0;
+				}
+			}
+		}
+
+		.panel{
+			color:@gris3;font-size:.9em;
+			h2{font-weight:800;font-size:.9em;color:@gris4;}
+			h4{color:@gris4;font-weight:bold;margin:2px 0;}
+			h5{color:@gris3;font-weight:bold;font-size:.9em;margin-bottom:0;margin:2px 0;}
+			small{
+				color:@gris3;
+			}
+		}
+		.panels2{
+			h5{font-size:.8em;}
+			h4{font-size:.9em;}
+		}
+		.panels2 .progress,.panels3 .progress{margin-bottom:5px;height:11px;
+			.progress-bar{
+				height:11px;
+				}
+			}
+	}
+}
+b{color:@darkblue;}
+
 a:hover{text-decoration:none;}
+
+.donutContainer,.donutContainer2 {
+    position: relative;
+
+}
+
+.donutContainer h2 {
+    text-align:center;
+    position: absolute;
+    line-height: 110px;
+    width: 100%;
+    font-size:1.6em!important;
+    color:@barscolor!important;
+}
+.donutContainer2 h2{
+	text-align:center;
+    position: absolute;
+    line-height: 60px;
+    width: 100%;
+    font-size:1em!important;
+    color:@barscolor!important;
+} 
+
+svg {
+	margin:auto;
+	display:block;
+    .transformaciones(rotate(-90deg));
+}
+circle#circle{
+	stroke:@barscolor;
+	stroke-width:.8em;
+	fill:none;
+}
+circle#circle2{
+	stroke:@barscolor;
+	stroke-width:.5em;
+	fill:none;
+}
+.donut {
+  stroke-dasharray: 377;
+  .animaciones(donut 1s linear);
+}
+
+.donut2{
+	stroke-dasharray: 252;
+  .animaciones(donut2 1s linear);
+}
+
+@keyframes donut {
+  from {
+    stroke-dashoffset: 377;
+  }
+  to{
+  	stroke-dashoffset: 0;
+  }
+}
+@keyframes donut2 {
+  from {
+    stroke-dashoffset: 252;
+  }
+  to{
+  	stroke-dashoffset: 0;
+  }
+}
