--- a/src/components/main/main.component.html
+++ b/src/components/main/main.component.html
@@ -45,12 +45,7 @@
 	</div>
 
 	<div class="container-fluid body">
-		<!-- 
 		
-		<div class="cuadrado3"></div>
-		<div class="cuadrado4"></div>
-		<div class="cuadrado5"></div>
-		<a href="" class="mainbtn">Hola</a> -->
 		<div class="row">
 			<div class="col-md-6 text-left">
 				<a href="" class="secondbtn"><i class="fas fa-long-arrow-alt-left "></i></a> <b>Reporte individual de resultados</b>
@@ -64,7 +59,7 @@
 			<div class="col-md-12">
 				<hr>
 				<div class="col-md-2 profile">
-					<img src="/src/assets/images/profile.jpg" alt="profile img" class="img-circle img-responsive">
+					<a href=""><img src="/src/assets/images/profile.jpg" alt="profile img" class="img-circle"></a>
 					<h2><b>John <br>Doe</b></h2>
 					<ul class="profilemenu">
 						<li class="active"><a href="">Resumen</a></li>
@@ -93,33 +88,93 @@
 				</div>
 				<div class="col-md-10 dashboard">
 					<div class="col-md-4">
-						<div class="col-md-12 panel">
-							<h3>Promedio general de desempeño</h3>
+						<div class="col-md-12 panel up-panels panels1">
+							<h2>Promedio general de desempeño</h2>
+
+							<div class="col-md-12 text-center">
+
+								<div class="donutContainer css">
+								    <h2>5,0 <sup>Pts</sup></h2>
+								    <svg width="150" height="150" xmlns="http://www.w3.org/2000/svg">
+								     <g>
+								      <title>Donut 1</title>
+								      <circle id="circle" class="donut" r="60" cy="50%" cx="50%"  />
+								     </g>
+								    </svg>
+								</div>
+								
+
+								<h5>Nivel obtenido</h5>
+								<h4>Excepcional</h4>
+							</div>
+								
 						</div>
 					</div>
 					<div class="col-md-4 ">
-						<div class="col-md-12 panel">
-							<h3>Promedio de competencias</h3>
+						<div class="col-md-12 panel up-panels panels2">
+							<h2>Promedio de competencias</h2>
+							<div class="col-md-4">
+								<div class="donutContainer2 css">
+								    <h2>5,0 <sup>Pts</sup></h2>
+								    <svg width="100" height="100" xmlns="http://www.w3.org/2000/svg">
+								     <g>
+								      <title>Donut 1</title>
+								      <circle id="circle2"  class="donut2" r="40" cy="50%" cx="50%"  />
+								     </g>
+								    </svg>
+								</div>
+							</div>
+							<div class="col-md-8">
+								<h5>Nivel obtenido</h5>
+								<h4>Excepcional</h4>
+								<small>Autoevaluación</small>
+								<div class="progress">
+									<div class="progress-bar" role="progressbar" aria-valuenow="2"
+										  aria-valuemin="0" aria-valuemax="5" style="width:100%">
+										  
+									</div>
+								</div>
+								<b>5,0 Pts</b> Excepcional
+							</div>
 						</div>
 					</div>
 					<div class="col-md-4 ">
-						<div class="col-md-12 panel">
-							<h3>Detalle de evaluación</h3>
+						<div class="col-md-12 panel up-panels panels3">
+							<h2>Detalle de evaluación</h2>
+
+							<div class="col-md-8">
+								<small>Descendente</small>
+								<div class="progress">
+									<div class="progress-bar" role="progressbar" aria-valuenow="2"
+										  aria-valuemin="0" aria-valuemax="5" style="width:100%">
+										  
+									</div>
+								</div>
+								<b>5,0 Pts</b> Excepcional
+							</div>
 						</div>
 					</div>
 					<div class="col-md-12">
 						<div class="col-md-12 panel detallecompetencias">
-							<h3>Promedio de competencias</h3>
+							<h2>Promedio de competencias</h2>
 							<div class="col-md-12 detalle_competencia">
 								<div class="col-md-11 text-center">
-									<b>Capacidad de Planificación y Organización</b>
+									<div class="col-md-4 text-right">
+										<b>Capacidad de Planificación y Organización</b>
+									</div>
+
+									<div class="col-md-4">
 										<div class="progress">
 										  <div class="progress-bar" role="progressbar" aria-valuenow="5"
 										  aria-valuemin="0" aria-valuemax="5" style="width:100%">
 										  
 										  </div>
 										</div>
+									</div>
+									<div class="col-md-4 text-left">
 										<b>5,0 Pts</b> Excepcional
+									</div>
+									
 								</div>
 								<div class="col-md-1">
 									<a href=""><i class="fas fa-angle-down" data-toggle="collapse" data-target="#planiforg"></i></a>
@@ -129,57 +184,127 @@
 								</div>
 							</div>
 							<div class="col-md-12 detalle_competencia">
-								<div class="col-md-11">
-										Planificacion y asdsad
+								<div class="col-md-11 text-center">
+										<div class="col-md-4 text-right">
+										<b>Orientación al Cliente Interno y Externo</b>
+									</div>
+
+									<div class="col-md-4">
+										<div class="progress">
+										  <div class="progress-bar" role="progressbar" aria-valuenow="2"
+										  aria-valuemin="0" aria-valuemax="5" style="width:100%">
+										  
+										  </div>
+										</div>
+									</div>
+									<div class="col-md-4 text-left">
+										<b>5,0 Pts</b> Excepcional
+									</div>
 								</div>
 								<div class="col-md-1">
 									<a href=""><i class="fas fa-angle-down" data-toggle="collapse" data-target="#cliente"></i></a>
 								</div>
-								<div id="cliente" class="collapse">
+								<div id="cliente" class="collapse col-md-12">
 									Lorem ipsum dolor text....
 								</div>
 							</div>
 							<div class="col-md-12 detalle_competencia">
-								<div class="col-md-11">
-										Planificacion y asdsad
+								<div class="col-md-11 text-center">
+										<div class="col-md-4 text-right">
+										<b>Excelencia en la Ejecución</b>
+									</div>
+
+									<div class="col-md-4">
+										<div class="progress">
+										  <div class="progress-bar" role="progressbar" aria-valuenow="5"
+										  aria-valuemin="0" aria-valuemax="5" style="width:100%">
+										  
+										  </div>
+										</div>
+									</div>
+									<div class="col-md-4 text-left">
+										<b>5,0 Pts</b> Excepcional
+									</div>
 								</div>
 								<div class="col-md-1">
 									<a href=""><i class="fas fa-angle-down" data-toggle="collapse" data-target="#ejecucion"></i></a>
 								</div>
-								<div id="ejecucion" class="collapse">
+								<div id="ejecucion" class="collapse col-md-12">
 									Lorem ipsum dolor text....
 								</div>
 							</div>
 							<div class="col-md-12 detalle_competencia">
-								<div class="col-md-11">
-										Planificacion y asdsad
+								<div class="col-md-11 text-center">
+										<div class="col-md-4 text-right">
+										<b>Relaciones Humanas</b>
+									</div>
+
+									<div class="col-md-4">
+										<div class="progress">
+										  <div class="progress-bar" role="progressbar" aria-valuenow="5"
+										  aria-valuemin="0" aria-valuemax="5" style="width:100%">
+										  
+										  </div>
+										</div>
+									</div>
+									<div class="col-md-4 text-left">
+										<b>5,0 Pts</b> Excepcional
+									</div>
 								</div>
 								<div class="col-md-1">
 									<a href=""><i class="fas fa-angle-down" data-toggle="collapse" data-target="#relhumanas"></i></a>
 								</div>
-								<div id="relhumanas" class="collapse">
+								<div id="relhumanas" class="collapse col-md-12">
 									Lorem ipsum dolor text....
 								</div>
 							</div>
 							<div class="col-md-12 detalle_competencia">
-								<div class="col-md-11">
-										Planificacion y asdsad
+								<div class="col-md-11 text-center">
+										<div class="col-md-4 text-right">
+										<b>Comunicación Eficaz</b>
+									</div>
+
+									<div class="col-md-4">
+										<div class="progress">
+										  <div class="progress-bar" role="progressbar" aria-valuenow="5"
+										  aria-valuemin="0" aria-valuemax="5" style="width:100%">
+										  
+										  </div>
+										</div>
+									</div>
+									<div class="col-md-4 text-left">
+										<b>5,0 Pts</b> Excepcional
+									</div>
 								</div>
 								<div class="col-md-1">
 									<a href=""><i class="fas fa-angle-down" data-toggle="collapse" data-target="#comefi"></i></a>
 								</div>
-								<div id="comefi" class="collapse">
+								<div id="comefi" class="collapse col-md-12">
 									Lorem ipsum dolor text....
 								</div>
 							</div>
 							<div class="col-md-12 detalle_competencia">
-								<div class="col-md-11">
-										Planificacion y asdsad
+								<div class="col-md-11 text-center">
+										<div class="col-md-4 text-right">
+										<b>Tolerancia a la Presión del Trabajo</b>
+									</div>
+
+									<div class="col-md-4">
+										<div class="progress">
+										  <div class="progress-bar" role="progressbar" aria-valuenow="5"
+										  aria-valuemin="0" aria-valuemax="5" style="width:100%">
+										  
+										  </div>
+										</div>
+									</div>
+									<div class="col-md-4 text-left">
+										<b>5,0 Pts</b> Excepcional
+									</div>
 								</div>
 								<div class="col-md-1">
 									<a href=""><i class="fas fa-angle-down" data-toggle="collapse" data-target="#presiontrab"></i></a>
 								</div>
-								<div id="presiontrab" class="collapse">
+								<div id="presiontrab" class="collapse col-md-12">
 									Lorem ipsum dolor text....
 								</div>
 							</div>
