--- a/src/components/main/main.component.html
+++ b/src/components/main/main.component.html
@@ -119,7 +119,7 @@
 								    <svg width="100" height="100" xmlns="http://www.w3.org/2000/svg">
 								     <g>
 								      <title>Donut 1</title>
-								      <circle id="circle2"  class="donut2" r="40" cy="50%" cx="50%"  />
+								      <circle id="circle2"  class="donut2"  cy="50%" cx="50%"  />
 								     </g>
 								    </svg>
 								</div>
