--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -1,249 +1,9 @@
 // AngularJS specific styles (like ng-cloak)
 @import "angular-styles";
+@import "variables";
+@import "mixins";
+@import "layout";
+@import "responsive";
 
-
-
-//Colors
-@maincolor:#024f9f;
-@secundarycolor:#ff7351;
-@backgroundcolor:#e9ebee;
-@gris2:#d6d7d9;
-@gris3:darken(@gris2,30%);
-@gris4:darken(@gris3,60%);
-@barscolor:#4580c2;
-@menutextcolor:#7fa7cf;
-@darkblue:#43526e;
-
-@red:#ff5f3b;
-
-
-//mixins
-
-.cuadrado(@color: @maincolor){
-	height:15px;
-	width: 15px;
-	display:inline-block;
-	background-color:@color;
-
-}
-.botones(@fondo: @maincolor,@colortxt:@secundarycolor,@colorborde:@secundarycolor){
-	padding:4px 14px;
-	margin:0 5px;
-	border-radius:2px;
-	border:solid 0.1em;
-	font-size:.7em;
-	display: inline-block;
-	font-weight:bolder;
-	background-color:@fondo;
-	color:@colortxt;
-	border-color:@colorborde;
-	.transiciones;
-}
-.transiciones(@transicion: all ease .4s){
-	-webkit-transition:  @transicion;
-	   -moz-transition:  @transicion;
-	    -ms-transition:  @transicion;
-	     -o-transition:  @transicion;
-	        transition:  @transicion;
-}
-.animaciones(@animation){
-	-webkit-animation:@animation;
-	-o-animation:@animation ;
-	animation:@animation ;
-}
-.transformaciones(@transform){
-	-webkit-transform: @transform;
-	   -moz-transform: @transform;
-	    -ms-transform: @transform;
-	     -o-transform: @transform;
-	        transform: @transform;
-}
-
-.mainbtn{
-	.botones(@secundarycolor,#fff,@secundarycolor);
-}
-.mainbtn:hover{
-	.botones(transparent,@secundarycolor,@secundarycolor);
-}
-.secondbtn{
-	.botones(@gris2,#656c7a,@gris2);
-}
-.secondbtn:hover{
-	.botones(#656c7a,@gris2,@gris2);
-}
-
-.cuadrado1{
-	.cuadrado(#ff5f3b);
-}
-.cuadrado2{
-	.cuadrado(#ffda3e);
-}
-.cuadrado3{
-	.cuadrado(#93d753);
-}
-.cuadrado4{
-	.cuadrado(#67baef);
-}
-.cuadrado5{
-	.cuadrado(@barscolor);
-}
-
-
-
-//Layout
-
-
-small{color:@gris4;font-size:.7em;font-weight:bold;}
-hr{border-color:@gris2;}
-.header{background-color:@maincolor;
-	a{color:@menutextcolor;}
-	.navbar{
-		margin-bottom:0px;
-		.navbar-brand{color:#fff;}
-		.navbar-header{
-			.icon-bar{background-color:#fff;}
-		}
-		.navbar-nav{
-			a{.transiciones;}
-			a:hover{background-color:inherit;color:#a0d0ff;}
-			
-		}
-		.navbar-collapse{
-			.navbar-right{
-				a.dropdown-toggle{color:#fff;font-weight:bold;}
-				img{height:22px;margin-right:10px;}
-				a:hover,a:focus,a:visited{background-color:inherit;}
-			}
-		}
-	}
-}
-body{background-color:@backgroundcolor;letter-spacing:-0.3px;color:@gris4;}
-.body{padding-top:10px;
-	.profile{
-		img{width: 40%;.transiciones();}
-		img:hover{.transformaciones(scale(1.2));}
-		.profilemenu{
-			padding:0;
-			li{
-
-				list-style:none;
-				padding:5px;
-				.transiciones(all ease .4s);
-				a{ color:@gris4;}
-
-			}
-
-			li.active,li:hover{background-color:@gris2;
-				a{color:@barscolor;}
-			}
-		}
-		.escalas{
-			padding:0;
-			li{
-				list-style: none;padding: 3px 0;font-size:.8em;
-				p{color:@gris3;font-size:.8em;}
-			}
-		}
-	}
-	.dashboard{
-		.up-panels{min-height:250px;}
-		.detallecompetencias{
-
-			.progress{
-				width:100%;display:inline-block;margin-bottom:0;
-				.progress-bar{background-color:@barscolor;}
-			}
-			.detalle_competencia{
-				padding:10px;border-bottom:solid 0.1em @backgroundcolor;
-				b{font-size:.8em;padding:0 20px;}
-				.collapse{
-					padding:40px 0;
-				}
-			}
-		}
-
-		.panel{
-			color:@gris3;font-size:.9em;
-			h2{font-weight:800;font-size:.9em;color:@gris4;}
-			h4{color:@gris4;font-weight:bold;margin:2px 0;}
-			h5{color:@gris3;font-weight:bold;font-size:.9em;margin-bottom:0;margin:2px 0;}
-			small{
-				color:@gris3;
-			}
-		}
-		.panels2{
-			h5{font-size:.8em;}
-			h4{font-size:.9em;}
-		}
-		.panels2 .progress,.panels3 .progress{margin-bottom:5px;height:11px;
-			.progress-bar{
-				height:11px;
-				}
-			}
-	}
-}
-b{color:@darkblue;}
-
-a:hover{text-decoration:none;}
-
-.donutContainer,.donutContainer2 {
-    position: relative;
-
-}
-
-
-
-.donutContainer h2 {
-    text-align:center;
-    position: absolute;
-    line-height: 110px;
-    width: 100%;
-    font-size:1.6em!important;
-    color:@barscolor!important;
-}
-.donutContainer2 h2{
-	text-align:center;
-    position: absolute;
-    line-height: 60px;
-    width: 100%;
-    font-size:1em!important;
-    color:@barscolor!important;
-} 
-
-svg {
-	margin:auto;
-	display:block;
-    .transformaciones(rotate(-90deg));
-}
-
-.donutchart(@radio,@anchoborde,@puntos){
-	@perimetro: ceil(2*3.14*@radio);
-	@porcentaje: (@puntos*100)/5;
-	@porcion: (@perimetro*@porcentaje)/100;
-	cy:50%;
-	cx:50%;
-	fill:none;
-	r:@radio;
-	stroke:inherit;
-	stroke-width:@anchoborde;
-	stroke-dasharray:@perimetro;
-	stroke-dashoffset:@perimetro - @porcion;
-	.colorchart(@puntos);
-	
-
-
-}
-
-
-.colorchart(@puntos) when (@puntos >= 4.0) and (@puntos < 5.1){
-	stroke:red!important;
-}
-circle#circle{
-	.donutchart(60,0.8em,5.0);
-}
-circle#circle2{
-	.donutchart(40,0.5em,1.0);
-	
-}
 
 
